fix: aligned input count and input field on create collections controller

--- a/src/sass/pages/_search.scss
+++ b/src/sass/pages/_search.scss
@@ -465,36 +465,44 @@
         display: flex;
         flex-direction: column;
 
-        &__input {
-          display: block;
-          padding: var(--space-2) var(--space-8) var(--space-2) var(--space-4);
-          font-size: var(--font-size-l);
+        &__input-container {
+          display: flex;
+          align-items: center;
           border-radius: 2rem;
-          border: none;
-          transition: box-shadow 0.2s;
-          background-color: var(--color-background);
-          color: var(--color-gray-dark);
+          overflow: hidden;
           box-shadow: 0.1rem 0.2rem 1.2rem rgba(var(--color-shadow-rgb), 0.2);
+          background-color: var(--color-background);
+          padding: var(--space-2) var(--space-4);
+          gap: var(--space-1);
 
-          &::placeholder {
-            font-size: var(--font-size-m);
-            text-transform: capitalize;
-            color: var(--color-gray-light);
-          }
-
-          &:focus {
-            outline: none;
+          &.focused {
             box-shadow: 0.1rem 0.4rem 1.6rem rgba(var(--color-shadow-rgb), 0.3);
           }
-        }
 
-        &__input-count {
-          display: inline-block;
-          position: absolute;
-          top: 13%;
-          right: 5%;
-          font-size: var(--font-size-s);
-          color: var(--color-gray-light);
+          &__input {
+            display: block;
+            font-size: var(--font-size-l);
+            border: none;
+            transition: box-shadow 0.2s;
+            color: var(--color-gray-dark);
+            background-color: var(--color-background);
+
+            &::placeholder {
+              font-size: var(--font-size-m);
+              text-transform: capitalize;
+              color: var(--color-gray-light);
+            }
+
+            &:focus {
+              outline: none;
+            }
+          }
+
+          &__input-count {
+            display: inline-block;
+            font-size: var(--font-size-s);
+            color: var(--color-gray-light);
+          }
         }
 
         &__btn {
